# telegram-agent-saas

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  JIRATASKS.md  Makefile  README.md  TASKS.md  TECHSPEC.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.gemini/: ralph-loop.local.md
.gemini/skills/task-executor/: SKILL.md
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 20260324_0001_initial_schema.py
services/admin/src/: admin_database.py  auth.py  catalog_browser.py  catalog_crud.py  catalog_seed.py  chat_monitor.py  main.py  schema_designer.py  tenant_management.py
services/admin/tests/: test_admin_runtime.py  test_auth.py  test_catalog_browser.py  test_catalog_crud.py  test_catalog_seed.py  test_chat_monitor.py  test_schema_designer.py  test_tenant_management.py
services/api/src/: main.py
services/api/tests/: conftest.py  fakes.py  test_ai_service.py  test_alembic_setup.py  test_api_config.py  test_api_routes.py  test_catalog_tool.py  test_conversation_service.py  test_crud_base.py  test_database.py  test_dynamic_filter_generator.py  test_github_workflows.py  test_initial.py  test_logging.py  test_main.py  test_models_chat.py  test_models_message.py  test_models_order.py  test_models_product.py  test_models_tenant.py  test_runtime_smoke.py  test_search_service.py  test_telegram_webhook_service.py  test_tenant_isolation.py
services/bot/src/: main.py  webhooks.py
services/bot/tests/: test_bot_config.py  test_bot_runtime.py  test_bot_runtime_smoke.py  test_webhooks.py
(+48 files in other folders)
